sorted navigation out and have a kind of plan for add new and edit

--- a/XeppIT.ZoneElectrical/XeppIT.ZoneElectrical.csproj
+++ b/XeppIT.ZoneElectrical/XeppIT.ZoneElectrical.csproj
@@ -15,4 +15,10 @@
     <PackageReference Include="MongoDB.Driver" Version="2.10.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Rolodex\Addresses\" />
+    <Folder Include="Rolodex\Contacts\" />
+    <Folder Include="Rolodex\Companies\" />
+  </ItemGroup>
+
 </Project>
