--- a/XeppIT.ZoneElectrical/XeppIT.ZoneElectrical.csproj
+++ b/XeppIT.ZoneElectrical/XeppIT.ZoneElectrical.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Blazorise.Bootstrap" Version="0.9.0.3" />
+    <PackageReference Include="Blazorise.Components" Version="0.9.0.3" />
     <PackageReference Include="Blazorise.DataGrid" Version="0.9.0.3" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
